<resources>
    <string name="app_name">ChatApp</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="log_in">Log In</string>
    <string name="log_in_to_your_account">Log in to your Account</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="change_your_bio">Change Your Bio</string>
    <string name="change_your_picture">Change Your Picture</string>
    <string name="change_bio_here">Change bio here</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

</resources>
