<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidproject.chatapp.UserBioActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/user_bio_bar">

    </include>

    <TextView
        android:id="@+id/change_bio_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_bio_bar"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:gravity="center"
        android:text="@string/change_your_bio"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/change_bio_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:hint="@string/change_bio_here"
        android:maxLength="120" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="270dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/save_bio_button"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/discard_bio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:text="@string/discard"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
